[project]
name = "project1-bednyakov-ivan-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "MrGuss",email = "bednyakov04@mail.ru"}
]
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
