[project]
name = "project1-bednyakov-ivan-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "MrGuss",email = "bednyakov04@mail.ru"}
]
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120 # I prefer 120, and 88 is not pep8 compliant too
target-version = "py310"
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)"
]
